--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "prop-types": "^15.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-full-screen": "^1.1.0",
     "react-helmet": "^6.1.0",
+    "react-imageslides": "^3.0.0-beta.2",
     "react-notifications": "^1.7.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
