--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-notifications": "^1.7.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
