--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
+  "eslintConfirg": {
     "extends": [
       "react-app",
       "react-app/jest"
