--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/styles": "^5.2.3",
     "@mui/x-data-grid": "^5.6.1",
     "@mui/x-data-grid-pro": "^5.6.1",
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
