--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@mui/styles": "^5.2.3",
     "@mui/x-data-grid": "^5.6.1",
     "@mui/x-data-grid-pro": "^5.6.1",
-    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -65,8 +64,7 @@
   },
   "devDependencies": {
     "prettier": "2.5.1",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-mock-store": "^1.5.4"
+    "redux-devtools-extension": "^2.13.9"
   },
   "prettier": {
     "singleQuote": true
